components/molecule/inputTags/src/index.scss
@import '~@schibstedspain/sui-theme/lib/index';
@import '~@s-ui/react-atom-input/lib/index';
@import '~@schibstedspain/sui-atom-tag/lib/index';

$base-class: '.sui-AtomInput';
$base-class-tag: '.sui-AtomTag';
$class-tags: '#{$base-class}--withTags';
$class-input: '#{$base-class}-input';

$sizes-atom-input-paddings: m $p-m, s $p-s !default;

#{$class-tags} {
  @extend %sui-atom-input-input;
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  padding: 0 0 0 $p-m;

  &--focus {
    @extend %sui-atom-input-input-focus;
  }

  & #{$class-input} {
    flex: 1;
    height: 100%;
    padding-left: $p-m;
  }
  
  @each $type, $attr in $sizes-atom-input {
    &-#{$type} {
      height: 100%;
      min-height: $attr;

      #{$class-input} {
        min-height: calc(#{$attr} - #{$p-m} * 2 - 2px);
      }

    }
  }

  @each $type, $attr in $sizes-atom-input-paddings {
    &-#{$type} {
      #{$class-tags}-container {
        padding: $attr 0 $attr $attr;
      }

      #{$base-class-tag} {
        margin-bottom: calc(#{$attr} - 2px);
        margin-top: calc(#{$attr} - 2px);
      }
    }
  }

  @each $state, $color in $states-atom-input {
    &--#{$state} {
      border-color: $color;
    }
  }
  
}

